# retrieval_augmented_generation

./: .gitignore  pyproject.toml
natural_questions/: natural_questions.ipynb
src/retrieval_augmented_generation/: __init__.py  types.py  utils.py
