[project]
name = "retrieval-augmented-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pedro José Mora Gallegos", email = "pedrojosemoragallegos@outlook.de" },
]
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5", "tqdm>=4.67.1"]
[dependency-groups]
dev = ["ipykernel>=6.30.1", "ipython>=8.37.0"]

[project.scripts]
retrieval-augmented-generation = "retrieval_augmented_generation:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
